--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,10 +1,137 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<nav class="navbar navbar-default" xmlns="">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <img class="logos" src="assets/images/logos.png" />
+      <a class="navbar-brand" routerLink="/" (click)="hideLogin()">Aukcion</a>
+      <span><img class="log_gif" src="assets/images/log.gif" /></span>
+      <ul class="nav navbar-nav navbar-right">
+        <li ><a routerLink="/login" *ngIf="!currentUser" (click)="showLogin()">Login</a></li>
+        <li ><a routerLink="/register" *ngIf="!currentUser" (click)="hideLogin($event)" id="register">Registration</a></li><br/>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<div class="container  col-md-12" [hidden]="!loginshowhide">
+  <section id="login">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-wrap">
+            <h1>Log in with your email account</h1>
+            <form  #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+              <div class="form-group">
+                <label for="email" class="sr-only">Email</label>
+                <input type="text" name="email" id="email" class="form-control" placeholder="somebody@example.com"   ngModel>
+              </div>
+              <div class="form-group">
+                <label for="key" class="sr-only">Password</label>
+                <input type="password" name="password" id="key" class="form-control" placeholder="Password" ngModel>
+              </div>
+              <div class="checkbox" id="checkbox">
+                <span class="character-checkbox" (click)="showPassword()"></span>
+                <span class="label">Show password</span>
+              </div>
+              <input type="submit" id="btn-login"  class="btn btn-custom btn-lg btn-block" value="Log in">
+            </form>
+            <a routerLink="/forgot" class="forget" data-toggle="modal" >Forgot your password?</a>
+            <hr>
+          </div>
+        </div> <!-- /.col-xs-12 -->
+      </div> <!-- /.row -->
+    </div> <!-- /.container -->
+  </section>
+
+  <div class="modal fade forget-modal" tabindex="-1" role="dialog" aria-labelledby="myForgetModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">×</span>
+            <span class="sr-only">Close</span>
+          </button>
+          <h4 class="modal-title">Recovery password</h4>
+        </div>
+        <div class="modal-body">
+          <p>Type your email account</p>
+          <input type="email" name="recovery-email" id="recovery-email" class="form-control" autocomplete="off">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-custom">Recovery</button>
+        </div>
+      </div> <!-- /.modal-content -->
+    </div> <!-- /.modal-dialog -->
+  </div> <!-- /.modal -->
+
+</div>
+
+<!--registartion form-->
+<div class="container  col-md-12" [hidden]="!registrshowhide">
+
+  <div class="col-md-8 col-md-offset-2" >
+    <section id="login">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="form-wrap">
+              <h1>Registration New Account</h1>
+              <form autocomplete="off" #registerForm="ngForm" (ngSubmit)="registration(registerForm)">
+                <div class="form-group">
+                  <label for="name" class="sr-only">Name</label>
+                  <input type="text" name="name" id="name" class="form-control" placeholder="John" ngModel>
+                </div>
+                <div class="form-group">
+                  <label for="email" class="sr-only">Email</label>
+                  <input type="text" name="email" id="email"   required pattern="[a-zA-Z_]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}"  class="form-control" placeholder="somebody@example.com" ngModel>
+                </div>
+                <div class="form-group">
+                  <label for="key" class="sr-only">Password</label>
+                  <input type="password" name="password" id="key" class="form-control" placeholder="Password" ngModel>
+                </div>
+                <div class="checkbox" id="checkbox">
+                  <span class="character-checkbox" (click)="showPassword()"></span>
+                  <span class="label">Show password</span>
+                </div>
+                <input type="submit" [disabled]="registerForm.invalid" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Sign up">
+              </form>
+              <hr>
+            </div>
+          </div> <!-- /.col-xs-12 -->
+        </div> <!-- /.row -->
+      </div> <!-- /.container -->
+    </section>
+
+    <div class="modal fade forget-modal" tabindex="-1" role="dialog" aria-labelledby="myForgetModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">×</span>
+              <span class="sr-only">Close</span>
+            </button>
+            <h4 class="modal-title">Recovery password</h4>
+          </div>
+          <div class="modal-body">
+            <p>Type your email account</p>
+            <input type="email" name="recovery-email" id="recovery-email" class="form-control" autocomplete="off">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-custom">Recovery</button>
+          </div>
+        </div> <!-- /.modal-content -->
+      </div> <!-- /.modal-dialog -->
+    </div> <!-- /.modal -->
+  </div>
+  <div class="col-md-2">
+  </div>
+</div>
+
