--- a/src/app/search/components/search/search.component.html
+++ b/src/app/search/components/search/search.component.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>4</title>
-</head>
-<body>
-
-</body>
-</html>
+<input type="text" name="searching"  ngModel (keyup)="search($event)"/>
