--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,250 @@
-/* You can add global styles to this file, and also import other style files */
+/*    --------------------------------------------------
+	:: Login Section
+	-------------------------------------------------- */
+#login {
+  padding-top: 35px
+}
+#login .form-wrap {
+  width: 30%;
+  margin: 0 auto;
+}
+#login h1 {
+  color: #eba44c;
+  font-size: 18px;
+  text-align: center;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+#login .form-group {
+  margin-bottom: 25px;
+}
+#login .checkbox {
+  margin-bottom: 20px;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+#login .checkbox.show:before {
+  content: '\e013';
+  color: #ff9b1f;
+  font-size: 17px;
+  margin: 1px 0 0 3px;
+  position: absolute;
+  pointer-events: none;
+  font-family: 'Glyphicons Halflings';
+}
+#login .checkbox .character-checkbox {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  vertical-align: middle;
+  display: inline-block;
+}
+#login .checkbox .label {
+  color: white;
+  font-size: 13px;
+  font-weight: normal;
+}
+#login .btn.btn-custom {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+#login .forget {
+  font-size: 13px;
+  text-align: center;
+  display: block;
+  color: white;
+}
+
+/*    --------------------------------------------------
+	:: Inputs & Buttons
+	-------------------------------------------------- */
+.form-control {
+  color: #212121;
+}
+.btn-custom {
+  color: #fff;
+  background-color: #eba44c;
+}
+.btn-custom:hover,
+.btn-custom:focus {
+  color: #fff;
+}
+
+/*    --------------------------------------------------
+    :: Footer
+	-------------------------------------------------- */
+#footer {
+  color: #6d6d6d;
+  font-size: 12px;
+  text-align: center;
+}
+#footer p {
+  margin-bottom: 0;
+}
+#footer a {
+  color: inherit;
+}
+
+.navbar-header{
+  width: 100%;
+}
+.navbar-right{
+  display: flex;
+  margin-right: -22% !important;
+}
+.logos{
+  width: 4%;
+  margin: 1%;
+}
+.log_gif{
+  width: 35%;
+  max-height: 70px;
+  margin-left: 7%;
+}
+.navbar-default{
+  background: #eba44c;
+}
+.navbar-default .navbar-nav>li>a{
+  line-height: 31px;
+}
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
+  background-color: wheat;
+}
+.navbar-brand{
+  height: 70px !important;
+}
+.navbar-brand:hover {
+  background-color: wheat !important;
+}
+
+.info_input{
+  min-width: 50%;
+  margin-bottom: 2%;
+}
+#userimg{
+  max-width: 100%;
+  border: 3px solid grey;
+  height: 185px;
+  margin-top: 2.6%;
+
+
+}
+.info_div{
+  text-align: -webkit-right;
+}
+
+.info_label{
+  width: 25%;
+  text-align: left;
+  color: white;
+}
+.info_save{
+  margin-top: 10%;
+}
+
+.hide_file {
+  cursor: pointer;
+  font-size: 18px;
+  width: 100%;
+  margin-top: 10%;
+}
+
+.row_div{
+  padding: 5% ;
+  background: #eba44c ;
+  z-index: 1000 ;
+  box-shadow: 0px 0px 5px 5px ;
+  min-height: 685px;
+
+}
+
+#btn-login{
+  background-color: grey !important;
+}
+.paginat{
+  text-align: center;
+
+}
+.prod_div{
+  margin-bottom: 3%;
+  margin-top: 3%;
+}
+
+input.ng-touched.ng-invalid {border:solid red 2px;}
+input.ng-touched.ng-valid {border:solid green 2px;}
+
+.prod_info{
+  margin-bottom: 1.2%;
+}
+
+/*nkar@ frcnuma morp class@*/
+
+/*.morph {*/
+/*-webkit-transition: all 1s ease;*/
+/*-moz-transition: all 1s ease;*/
+/*-o-transition: all 1s ease;*/
+/*-ms-transition: all 1s ease;*/
+/*transition: all 1s ease;*/
+/*}*/
+
+
+/*.morph:hover {*/
+/*border-radius: 50%;*/
+/*-webkit-transform: rotate(360deg);*/
+/*-moz-transform: rotate(360deg);*/
+/*-o-transform: rotate(360deg);*/
+/*-ms-transform: rotate(360deg);*/
+/*transform: rotate(360deg);*/
+/*}*/
+
+/*nkari mecacnelu hamar*/
+.hover01 figure img {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+.hover01 figure:hover img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+
+}
+
+
+.style_prevu_kit
+{
+
+  position: relative;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1);
+  transition: all 200ms ease-in;
+  transform: scale(1);
+
+}
+
+.style_prevu_kit:hover
+{
+  box-shadow: 0px 0px 10px grey;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1.2);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1.2);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1.2);
+  transition: all 200ms ease-in;
+  transform: scale(1.2);
+}
+#err{
+  display: none;
+}
